recipe creation progress but not fonctionnal yet

--- a/front--react/src/App.scss
+++ b/front--react/src/App.scss
@@ -12,3 +12,9 @@ a {
   text-decoration: none;
   font: inherit;
 }
+
+img {
+    // image-rendering: crisp-edges;
+    image-rendering: optimizeQuality;
+    image-rendering: -webkit-optimize-contrast;
+}
