--- a/front--react/src/scss/front-office/home.scss
+++ b/front--react/src/scss/front-office/home.scss
@@ -17,7 +17,6 @@
         border-top: none;
         padding: 0 20px;
         .tag {
-            border-top: 1px solid $dark-grey;
             border-left: 1px solid transparent;
             border-right: 1px solid transparent;
             &:hover {
@@ -32,7 +31,7 @@
                 align-items: center;
                 justify-content: center;
                 align-items: center;
-                height: 49px;
+                height: 48px;
                 padding: 0 20px;
                 border-radius: 35px;
                 i {
@@ -46,18 +45,18 @@
     }
     .recipes__container {
         padding: 20px;
+        width: 100vw;
         height: calc(100vh - 115px);
         overflow: hidden auto;
         display: flex;
         flex-flow: row wrap;
         gap: 20px;
-
         .recipe {
             &__item {
                 outline: 1px solid $dark-grey;
                 outline-offset: 5px;
                 flex-basis: calc(calc(100% / 3) - 20px);
-                height: calc(calc(100vh - 115px) / 2);
+                height: calc(calc(100vh - 170px) / 2);
                 overflow: hidden;
                 position: relative;
                 &:hover {
@@ -65,6 +64,14 @@
                     .recipe--blur {
                         backdrop-filter: blur(0px);
                     }
+                }
+                @include tablet {
+                    flex-basis: calc(calc(100% / 2) - 20px);
+                    height: 30vh;
+                }
+                @include mobile {
+                    flex-basis: 100%;
+                    height: 30vh;
                 }
             }
             &--blur {
@@ -91,6 +98,9 @@
             }
             &__title {
                 @include font-preset--tag;
+                // white-space: nowrap;
+                // overflow: hidden;
+                // text-overflow: ellipsis;
                 border-top: 1px solid $dark-grey;
                 top: 5px;
                 margin: 0 5px;
@@ -100,7 +110,9 @@
                 justify-content: center;
                 padding: 10px 0;
                 background: #eee;
-
+                @include tablet {
+                    padding: 10px 20px;
+                }
             }
             &__button {
                 top: calc(50% - 25px);
